# oxydraw

./: .dockerignore  .env.example  .gitignore  .trivyignore.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  backlog.config.yml  cog.toml  dist-workspace.toml
.backlog/tasks/: task-0001 - SEC-7-Password-comparison-leaks-length-via-short-circuiting-ct_eq.md  task-0002 - SEC-33-Scene-library-has-no-count-or-size-quota.md  task-0003 - ASYNC-10-Store-trait-uses-async_trait-instead-of-native-async-fn-in-traits.md  task-0004 - DUP-3-Repeated-error-e-as-dyn-std-error-Error-cast-pattern-in-tracing-calls.md  task-0005 - SEC-7-Google-OIDC-nonce-verification-fails-open-when-pending-nonce-is-absent.md  task-0006 - SEC-19-Anonymous-document-access-in-get_document-is-undocumented-by-design-behavior.md  task-0007 - SEC-29-No-startup-warning-when-OAuth-is-enabled-without-PUBLIC_URL.md  task-0008 - CONC-7-SQLite-runs-in-default-rollback-journal-mode-every-write-blocks-all-readers-enable-WAL.md  task-0009 - PERF-12-No-indexes-on-scenesowner-and-sessionsexpires_at-—-list-prune-queries-do-full-table-scans.md  task-0010 - SEC-29-SQLite-database-file-created-with-default-world-readable-permissions.md  task-0011 - DUP-3-.map_errbackend_err-repeated-57-times-in-sqlite.rs.md  task-0012 - SEC-11-Stored-file-download-reflects-attacker-chosen-Content-Type-enabling-same-origin-stored-XSS.md  task-0013 - OWN-6-redact-takes-Option-String-instead-of-Option-str.md  task-0014 - PERF-3-Hex-encoding-via-per-byte-format-allocates-a-String-per-byte-in-session-token-paths.md  task-0015 - ERR-5-.expect-identity-without-user-relies-on-cross-map-lock-invariant-in-memory-UserStore.md  task-0016 - SEC-18-server-broadcast-relays-to-any-room-without-membership-check-bypassing-join-path-caps.md  task-0017 - SEC-38-join-room-racing-disconnect-can-strand-sid-entries-in-the-Rooms-registry.md  task-0018 - ARCH-11-collab-dev-deps-pin-versions-per-crate-instead-of-inheriting-from-workspace.md  task-0019 - CL-3-room-user-change-member-list-read-under-a-second-lock-acquisition-not-atomic-with-the-join.md  task-0020 - SEC-11-Client-supplied-room-id-logged-raw-via-Display-allowing-log-line-forging-via-control-characters.md  task-0021 - TEST-6-on_disconnects-room-user-change-emission-to-remaining-members-has-no-end-to-end-coverage.md  task-0022 - TEST-4-spawn_server-helper-duplicated-verbatim-across-integration-test-binaries.md  task-0023 - ARCH-11-collab-declares-serde-unused-and-serde_json-test-only-as-production-dependencies.md  task-0024 - code-review-plan-wave0.md  task-0025 - code-review-plan-wave1.md  task-0026 - code-review-plan-wave2.md  task-0027 - code-review-plan-wave3.md  task-0028 - code-review-plan-wave4.md  task-0029 - SEC-18-OAuth-sign-in-has-no-user-allowlist-—-any-Google-GitHub-account-gets-full-library-access.md  task-0030 - SEC-33-Durable-file-quota-counts-only-payload-bytes-unbounded-object-names-and-row-count-bypass-it.md  task-0031 - SEC-10-Session-tokens-generated-with-rand-rng-instead-of-OsRng.md  task-0032 - SEC-29-Default-configuration-is-fully-open-no-auth-bound-to-0.0.0.0.md  task-0033 - ASYNC-1-CPU-heavy-multi-MB-asset-rewrite-runs-on-the-async-executor-and-under-a-Mutex-on-cache-miss.md  task-0034 - ERR-4-Startup-storage-error-flattened-via-anyhow-e-severing-the-source-chain.md  task-0035 - ERR-1-Sessions-revoke-silently-swallows-delete_session-errors.md  task-0036 - ERR-6-Sessions-validate-collapses-backend-failures-into-None-401-and-drops-the-error.md  task-0037 - ERR-4-establish_session-propagates-four-same-typed-store-calls-with-bare-and-no-context.md  task-0038 - CONC-5-Blocking-std-fs-calls-inside-async-SqliteStore-connect.md  task-0039 - CONC-7-Single-global-Mutex-serializes-all-reads-on-the-hottest-unauthenticated-endpoints-LRU-maps.md  task-0040 - ARCH-1-ext_routes.rs-is-a-705-line-module-mixing-auth-and-scene-library-concerns.md  (+103 more)
.github/workflows/: bump.yml  ci.yml  docker.yml  publish-deb.yml  publish-homebrew.yml  release.yml
backend/: Cargo.toml  clippy.toml  deny.toml
backend/crates/collab/: Cargo.toml
backend/crates/collab/src/: lib.rs
backend/crates/collab/tests/: broadcast.rs  handshake.rs  relay.rs
backend/crates/collab/tests/common/: mod.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: config.rs  lib.rs  model.rs  store.rs  sync.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: bounded_map.rs  ext_routes.rs  files.rs  frontend.rs  host.rs  lib.rs  main.rs  rooms.rs  routes.rs  session.rs
backend/crates/server/src/ext_routes/: auth.rs  folders.rs  scenes.rs  test_support.rs
backend/crates/server/src/oauth/: github.rs  google.rs  mod.rs
backend/crates/server/tests/: ext.rs  ext_auth.rs  ext_oauth_github.rs  ext_oauth_google.rs  folders.rs  rooms.rs  security_headers.rs  share.rs  storage.rs  store_errors.rs
backend/crates/server/tests/common/: mod.rs
backend/crates/server/tests/data/: oidc_test_key.n.txt  oidc_test_key.pem
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs  memory.rs  sqlite.rs
docs/: AUTH.md  DEPLOYMENT.md  excalidraw-flavors-comparison.md
frontend/: .gitignore  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/public/: sw.js
frontend/src/: App.tsx  ErrorBoundary.tsx  config.ts  crypto.test.ts  crypto.ts  files.ts  fragment.ts  http.ts  index.css  localData.ts  main.tsx  share.test.ts  share.ts
frontend/src/collab/: Collab.ts  protocol.test.ts  protocol.ts
packaging/: Makefile  oxydraw.env
packaging/deb/: Makefile  conffiles  control.in  postinst  postrm  prerm
packaging/docker/: Dockerfile.build
packaging/systemd/: oxydraw.service
