[package]
name = "oxydraw"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

# publish = false hides this package from cargo-dist; opt back in explicitly
# (we don't publish to crates.io, but dist builds the release binaries).
[package.metadata.dist]
dist = true

[[bin]]
name = "oxydraw"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
oxydraw-core = { workspace = true }
oxydraw-storage = { workspace = true, features = ["sqlite"] }
oxydraw-collab = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

rust-embed = { workspace = true }
mime_guess = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
subtle = { workspace = true }
sha2 = { workspace = true }
oauth2 = { workspace = true }
openidconnect = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
jsonwebtoken = { workspace = true }
async-trait = { workspace = true }

# Debian/Ubuntu packaging (`cargo deb`). Build the frontend first so it is embedded
# (see docs/DEPLOYMENT.md); asset paths are relative to this manifest directory.
[package.metadata.deb]
maintainer = "Rodrigo Valeri <rsvalerio@gmail.com>"
copyright = "2026, Rodrigo Valeri"
license-file = ["../../../LICENSE", "0"]
section = "web"
priority = "optional"
extended-description = """\
Self-hosted Excalidraw-based whiteboard, written in Rust. Serves the OxyDraw web UI \
(built on the @excalidraw/excalidraw editor) from a single binary with embedded SQLite \
persistence: anonymous shareable links, a Socket.IO collaboration relay, scene image \
files, and per-room scene snapshots."""
# Auto-detect linked shared libraries (libc, TLS).
depends = "$auto, ca-certificates"
assets = [
    ["target/release/oxydraw", "usr/bin/", "755"],
    ["../../../packaging/oxydraw.env", "etc/oxydraw/oxydraw.env", "640"],
    ["../../../README.md", "usr/share/doc/oxydraw/README.md", "644"],
    ["../../../docs/DEPLOYMENT.md", "usr/share/doc/oxydraw/DEPLOYMENT.md", "644"],
]
# Preserve admin edits to the env file across upgrades.
conf-files = ["/etc/oxydraw/oxydraw.env"]

[package.metadata.deb.systemd-units]
# Installs packaging/systemd/oxydraw.service and wires up enable/restart on
# install/upgrade. Enabled but not started, so the admin can edit the env file first.
unit-scripts = "../../../packaging/systemd"
enable = true
start = false

